feat: config store redux

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="A simple project starter to work with React, TypeScript, Styled Components, Storybook, Eslint, Prettier, Husky, React Testing Library, Jest and Jest Styled Components!" />
-  <title>Boilerplate React</title>
+  <meta name="description" content="This project was made to learn how redux and redux-saga work and how to test it." />
+  <title>Redux Saga</title>
 </head>
 
 <body>
